Fixed Designers Carousel issues (Still not working on mobile)

--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -94,7 +94,7 @@
         width: 250px;
     }
 }
-
-/* .carousel::-webkit-scrollbar {
+/* 
+.carousel::-webkit-scrollbar {
     display: none;
 } */
